# StA_Advising

./: .gitignore  LICENSE  README.md  advising_tool.py  honours-module-choices-SURNAME-ID-template.xlsx  prototype_script.py  pyproject.toml
advising_code/: __init__.py  infrastructure.py  prerequisites.py  programme_requirements.py  student.py  timetabling.py
module_catalogue/: Module_catalogue.xlsx
src/advising/: Module_catalogue.xlsx  infrastructure.py  load_MC_honours.m  make_honours_timetable.m  prerequisites.py  programme_requirements.py  student.py  test_catalogue_differences.m  timetabling.py  write_honours_timetable.m
