[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "StAdvising"
version = "0.1"
dependencies = [
  "python-docx",
  "openpyxl",
  "pandas>=2.1.0",
  "termcolor"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
advising = ["*.xlsx"]
