[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "StAdvising"
version = "0.1"
dependencies = [
  "openpyxl",
  "python-docx",
  "pandas>=2.1.0",
  "termcolor",
  "xlsxwriter"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
advising = ["*.xlsx"]
